k8s-configs/api-gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway-deployment
  labels:
    app: api-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      automountServiceAccountToken: false
      containers:
        - name: api-gateway
          image: minh020698/event-driven-food-delivery-api-gateway:0.0.1-SNAPSHOT
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "1Gi"
              cpu: "256m"
              ephemeral-storage: "1Gi"
            limits:
              memory: "2Gi"
              cpu: "512m"
          
---
apiVersion: v1
kind: Service
metadata:
  name: api-gateway-service
spec:
  selector:
    app: api-gateway
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
