k8s-configs/delivery-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: delivery-service-deployment
  labels:
    app: delivery-service
spec:
  replicas: 1 # Start with two instances for high availability
  selector:
    matchLabels:
      app: delivery-service
  template:
    metadata:
      labels:
        app: delivery-service
    spec:
      automountServiceAccountToken: false
      containers:
        - name: delivery-service
          image: minh020698/event-driven-food-delivery-delivery-service:${VERSION}
          ports:
            - containerPort: 8081
          resources:
            requests:
              memory: "1Gi"
              cpu: "256m"
              ephemeral-storage: "1Gi"
            limits:
              memory: "2Gi"
              cpu: "512m"
---
apiVersion: v1
kind: Service
metadata:
  name: delivery-service-service
spec:
  selector:
    app: delivery-service
  ports:
    - protocol: TCP
      port: 8084
      targetPort: 8084
