k8s-configs/order-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service-deployment
  namespace: ${NAMESPACE}
  labels:
    app: order-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-service
  template:
    metadata:
      labels:
        app: order-service
    spec:
      automountServiceAccountToken: false
      containers:
        - name: order-service
          image: minh020698/event-driven-food-delivery-order-service:${VERSION}
          ports:
            - containerPort: 8083
          resources:
            requests:
              memory: "1Gi"
              cpu: "512m"
              ephemeral-storage: "1Gi"
            limits:
              memory: "2Gi"
              cpu: "1"
---
apiVersion: v1
kind: Service
metadata:
  name: order-service-service
  namespace: ${NAMESPACE}
spec:
  selector:
    app: order-service
  ports:
    - protocol: TCP
      port: 8083
      targetPort: 8083
