k8s-configs/restaurant-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: restaurant-service-deployment
  namespace: default
  labels:
    app: restaurant-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: restaurant-service
  template:
    metadata:
      labels:
        app: restaurant-service
    spec:
      automountServiceAccountToken: false
      containers:
        - name: restaurant-service
          image: minh020698/event-driven-food-delivery-restaurant-service:${VERSION}
          ports:
            - containerPort: 8082
          resources:
            requests:
              memory: "1Gi"
              cpu: "512m"
              ephemeral-storage: "1Gi"
            limits:
              memory: "2Gi"
              cpu: "1"
---
apiVersion: v1
kind: Service
metadata:
  name: restaurant-service-service
spec:
  selector:
    app: restaurant-service
  ports:
    - protocol: TCP
      port: 8082
      targetPort: 8082
