k8s-configs/user-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service-deployment
  namespace: ${NAMESPACE}
  labels:
    app: user-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      automountServiceAccountToken: false
      containers:
        - name: user-service
          image: minh020698/event-driven-food-delivery-user-service:${VERSION}
          ports:
            - containerPort: 8081
          resources:
            requests:
              memory: "1Gi"
              cpu: "256m"
              ephemeral-storage: "1Gi"
            limits:
              memory: "2Gi"
              cpu: "512m"
---
apiVersion: v1
kind: Service
metadata:
  name: user-service-service
  namespace: ${NAMESPACE}
spec:
  selector:
    app: user-service
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
